--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,16 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
-    steps: 
-      - name: Autenticar no Docker Hub
-        run: echo "Executando o comando Docker Login"
+    steps:
+      - name: Obter código da aplicação
+        uses: actions/checkout@v4
+      -
+        name: Autenticar no Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Construção da Imagem Docker
         run: echo "Executando o comando Docker Build"
       - name: Envio da Imagem Docker
@@ -24,4 +31,4 @@ jobs:
       - name: Configurar o kubectl
         run: echo "Executando o comando aws eks update-kubeconfig"
       - name: Deploy dos manifestos no Kubernets
-        run: echo "Executando o kubectl apply"
+        run: echo "Executando o kubectl apply"
